Stop orange buttons overflowing on profile/import deck/etc pages

--- a/client/styles/index.scss
+++ b/client/styles/index.scss
@@ -110,6 +110,7 @@ a {
 }
 
 .btn-secondary {
+    background-size: 100% 32px;
     &:not(.dropdown-toggle) {
         background-image: url('~assets/img/button-orange.png');
 
